modify css, fix .index-article overflow-x issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -380,8 +380,8 @@ section, article, aside, footer, header, nav {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.9);
-  overflow-y: auto;
   overflow-x: hidden;
+  overflow-y: auto;
   text-align: center;
   opacity: 0;
   transition: opacity 1s;
@@ -470,6 +470,17 @@ section, article, aside, footer, header, nav {
   margin: 0 auto;
   padding-right: 10px;
   padding-left: 10px;
+  .index-article {
+    overflow-x: hidden;
+    padding: 20px 5px 15px 5px;
+    img {
+      width: 100%;
+      margin: 0 auto 0.5em auto;
+      background-color: #f0f0f0 !important;
+      background-size: cover !important;
+      border: 1px solid rgba(0, 0, 0, 0.15) !important;
+    }
+  }
   .index-article-cover {
     color: transparent;
     display: block;
@@ -486,16 +497,6 @@ section, article, aside, footer, header, nav {
   }
   .index-article-cover-first {
     margin-bottom: 1rem;
-  }
-  .index-article {
-    padding: 20px 5px 15px 5px;
-    img {
-      width: 100%;
-      margin: 0 auto 0.5em auto;
-      background-color: #f0f0f0 !important;
-      background-size: cover !important;
-      border: 1px solid rgba(0, 0, 0, 0.15) !important;
-    }
   }
   .index-article-content {
     line-height: 1.5;
